--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Contact</title>
+        <!--Style sheets-->
           <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
           <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
           <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -9,7 +10,7 @@
 
 
     </head>
-
+  <!--Header code-->
     <header>
       <a href=/juhipat/comp126-final-project/index.html>
         <h1>Jenny Haynes Photography</h1>
@@ -18,6 +19,7 @@
     </header>
 
     <body>
+      <!--Container class-->
         <div class="container">
            <nav class="navbar navbar-expand-lg navbar-light bg-light">
               <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -99,6 +101,7 @@
                 </div>
     </div>
         </div>  
+              <!--Footer with Contact Info-->
               <footer>
                 <div class="contact">
                   <p><b>Contact Us</b><br>Phone Number: 919-777-7777<br>Email: jennyphotography@gmail.com</p></div>
