--- a/nature.html
+++ b/nature.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Nature</title>
+        <!--Style sheets-->
           <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
           <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
           <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -9,7 +10,7 @@
 
 
     </head>
-
+  <!--Header code-->
     <header>
       <a href=/juhipat/comp126-final-project/index.html>
         <h1>Jenny Haynes Photography</h1>
@@ -18,7 +19,9 @@
     </header>
 
     <body>
+      <!--Container class-->
         <div class="container">
+          <!--Navigation Bar-->
            <nav class="navbar navbar-expand-lg navbar-light bg-light">
               <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -52,6 +55,7 @@
                         <h2>NATURE</h2>
                     </div>
                 </div>
+                <!--Row for Nature Grid Images-->
               <div class="row">
                   <div class="col-lg-3 col-md-4 col-sm-6">
                       <img class="img-thumbnail img-fluid galleryPhoto" src="Images/Gallery/Nature/1.jpg" alt="Nat1">
@@ -104,7 +108,7 @@
                 </div>
         
         </div>
-
+              <!--Footer with Contact Info-->
               <footer>
                 <div class="contact">
                   <p><b>Contact Us</b><br>Phone Number: 919-777-7777<br>Email: jennyphotography@gmail.com</p></div>
